# discourse-lens

./: .gitignore
.github/workflows/: deploy.yml
pipeline/: pyproject.toml
pipeline/src/discourse_lens/: cache.py  cli.py  embed.py  export.py  http.py  journals.py  keywords.py  network.py  prep.py  schemas.py  sensitivity.py  stats.py  tag_llm.py  topics.py
pipeline/src/discourse_lens/ingest/: openalex.py
scripts/: make_og_image.py  openalex_smoke.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: journals.json  keyword_index.json  keyword_papers.json  network_et.json  network_ls.json  paper_tags.json  papers.json  sensitivity.json  thread_timeline.json  topic_thread_confusion.json  topics.json
web/src/: App.tsx  styles.css
web/src/components/: AdjacencyPanel.tsx  FilterBar.tsx  ForceGraph.tsx
web/src/lib/: data.ts  threads.ts
web/src/views/: CompareView.tsx  DiscourseView.tsx  DualNetworkView.tsx  MethodsView.tsx  TimelineView.tsx
